[package]
name = "rfa"
version = "0.1.0"
authors = ["byfw"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256  = "1.0.2" 
regex   = "1.5.4"
serde   = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
infer = "0.5.0"
